syntax = "proto3";

import "google/protobuf/timestamp.proto";

package mtch.userservice;
option go_package = "github.com/Arclight-V/mtch/pkg/userservice/userservicepb/v1;userservicepb";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc VerifyCode(VerifyRequest) returns (VerifyResponse);
}

enum CreateUserStatus {
  CREATE_USER_STATUS_UNSPECIFIED = 0;

  // Successfully created, but not yet verified
  CREATED_UNVERIFIED = 1;

  // There is already a user with this email address and it has been verified
  EXISTS_VERIFIED = 2;

  // Already exists, but has NOT been verified
  EXISTS_UNVERIFIED = 3;

  // Not created for a business reason
  REJECTED = 4;
}

message User {
  string uuid = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  optional string avatar = 6;
  string password_hash = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp update_at = 9;
  CreateUserStatus verified = 10;
}

message Date {
  int32 birth_day =1;
  int32 birth_month = 2;
  int32 birth_year = 3;
}

message PersonalData {
  string first_name = 1;
  string last_name = 2;
  string contact = 3;
  string phone = 5;
  string email = 6;
  string password = 7;
  Date   birth_date = 8;
  string gender = 9;
}

message RegisterRequest {
  PersonalData personal_data = 1;
}

message RegisterResponse {
  string user_id = 1;
  CreateUserStatus status = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  int64 expires_in = 5;
}

message VerifyRequest {
  string user_id = 1;
  string code = 2;
}

message VerifyResponse {
  string user_id = 1;
  bool verified = 2;
  google.protobuf.Timestamp verified_at = 3;
}